[gd_scene load_steps=10 format=2]

[ext_resource path="res://Puntos.gd" type="Script" id=2]
[ext_resource path="res://PressStart2P-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI.gd" type="Script" id=4]
[ext_resource path="res://Minion1.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 125
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 450
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 125
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 75
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 75
font_data = ExtResource( 3 )

[node name="TP-Minion1" type="Node"]
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 5, 5 )

[node name="UI" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Puntos" type="Label" parent="UI"]
visible = false
margin_left = -2523.0
margin_top = -1431.0
margin_right = -1313.0
margin_bottom = -1270.0
custom_fonts/font = SubResource( 1 )
text = "Rombos:0"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perdiste" type="Label" parent="UI"]
visible = false
margin_left = -1723.69
margin_top = -760.892
margin_right = 1948.31
margin_bottom = -61.8923
custom_fonts/font = SubResource( 2 )
text = "PERDISTE"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boton empezar" type="Button" parent="UI"]
margin_left = -643.303
margin_top = -286.627
margin_right = 634.697
margin_bottom = 230.373
custom_fonts/font = SubResource( 3 )
text = "Comenzar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boton reintentar" type="Button" parent="UI"]
visible = false
margin_left = -429.132
margin_top = 390.394
margin_right = 501.868
margin_bottom = 681.394
custom_fonts/font = SubResource( 4 )
text = "reintentar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boton ir al menu" type="Button" parent="UI"]
visible = false
margin_left = -526.864
margin_top = 754.81
margin_right = 588.136
margin_bottom = 1056.81
custom_fonts/font = SubResource( 5 )
text = "volver al menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UI/Boton empezar" to="UI" method="_on_Boton_empezar_pressed"]
[connection signal="pressed" from="UI/Boton empezar" to="." method="_on_Boton_empezar_pressed"]
[connection signal="pressed" from="UI/Boton reintentar" to="UI" method="_on_Boton_reintentar_pressed"]
[connection signal="pressed" from="UI/Boton reintentar" to="." method="_on_Boton_reintentar_pressed"]
[connection signal="pressed" from="UI/Boton ir al menu" to="UI" method="_on_Boton_ir_al_menu_pressed"]
[connection signal="pressed" from="UI/Boton ir al menu" to="." method="_on_Boton_ir_al_menu_pressed"]
